Luca L | resolved ex06

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-
+resolver = "2"
 members = [
         "exercises/02_lifetimes_explained/exercise",
         "exercises/02_lifetimes_explained/solutions",
@@ -9,6 +9,8 @@ members = [
         "exercises/04_mutable_references_and_containers/solutions",
         "exercises/05_lifetimes_on_types/exercise",
         "exercises/05_lifetimes_on_types/solutions",
+        "exercises/06_lifetimes_on_impls/exercise",
+        "exercises/06_lifetimes_on_impls/solutions",
         "exercises/07_special_lifetimes/exercise",
         "exercises/07_special_lifetimes/solutions",
         "exercises/08_finale/exercise",
